# vidscaler

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: packaging.yaml
vidscaler/: __init__.py  __main__.py  gui.py
